# ucapi-framework

./: README.md  TESTING_MODE_REMOVAL.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: getting-started.md  index.md  migration-guide.md  upgrade-to-1.6.0.md
docs/api/: config.md
docs/guide/: advanced-entity-patterns.md  configuration.md  device-patterns.md  driver.md  setup-flow.md
docs/stylesheets/: extra.css
git-hooks/: README.md  pre-commit
tests/: README.md  test_config.py  test_device.py  test_discovery.py  test_driver.py  test_entity.py  test_entity_registry.py  test_factory_pattern.py  test_helpers.py  test_migration.py  test_setup.py
ucapi_framework/: __init__.py  config.py  device.py  discovery.py  driver.py  entity.py  helpers.py  migration.py  setup.py
