[project]
name = "ucapi-framework"
version = "1.2.0"
description = "ucapi framework that provides core functionality for building integrations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyee>=9.0.0",
    "ucapi>=0.4.0",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
